--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-Django==1.11
+certifi==2019.6.16
+chardet==3.0.4
+Django==2.2.4
 feedparser==5.2.1
+idna==2.8
 pkg-resources==0.0.0
-pytz==2017.2
-requests==2.13.0
+pytz==2019.2
+requests==2.22.0
+sqlparse==0.3.0
+urllib3==1.25.3
